--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -15,8 +15,9 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_PROJECTS: "False"
+          SHOW_PROJECTS: "True"
           SHOW_LINES_OF_CODE: "False"
           SHOW_PROFILE_VIEWS: "False"
           SHOW_SHORT_INFO: "False"
           SHOW_LANGUAGE_PER_REPO: "False"
+          SHOW_TIMEZONE: "False"
