--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -21,3 +21,4 @@ jobs:
           SHOW_SHORT_INFO: "False"
           SHOW_LANGUAGE_PER_REPO: "False"
           SHOW_TIMEZONE: "False"
+          SHOW_LOC_CHART: "False"
